--- a/Aix/res/xml/aix_configuration.xml
+++ b/Aix/res/xml/aix_configuration.xml
@@ -4,14 +4,148 @@
 	
 	<PreferenceCategory
 			android:title="@string/header_widget_settings">
+
+		<PreferenceScreen
+				android:key="unit_settings"
+				android:title="Measurement Units"
+				android:summary="Set measurement units and rain scaling">
+			
+			<PreferenceCategory
+					android:title="@string/unit_settings_category">
+
+				<ListPreference
+						android:key="@string/preference_temperature_units"
+						android:title="@string/dialog_temperature_units_title"
+						android:persistent="true"
+						android:entries="@array/temperature_units_readable"
+						android:entryValues="@array/temperature_units_code"
+						android:defaultValue="1" />
+		
+				<ListPreference
+						android:key="@string/preference_precipitation_units"
+						android:title="@string/dialog_precipitation_units_title"
+						android:summary="@string/preference_precipitation_title"
+						android:persistent="true"
+						android:entries="@array/precipitation_units_readable"
+						android:entryValues="@array/precipitation_units_code"
+						android:defaultValue="1" />
+			
+			</PreferenceCategory>
+		
+		</PreferenceScreen>
 	
-		<ListPreference
-				android:key="measurement_unit"
-				android:title="@string/title_measurement_unit"
-				android:persistent="false"
-				android:entries="@array/measurement_unit_types_readable"
-				android:entryValues="@array/measurement_unit_types_values"
-				android:defaultValue="1" />
+		<PreferenceScreen
+				android:key="color_settings"
+				android:title="Colors and Transparency"
+				android:summary="Modify style of widget elements">
+		
+			<PreferenceCategory
+					android:title="@string/color_settings_category_main_title">
+					
+				<Preference
+						android:key="@string/preference_background_color"
+						android:title="@string/preference_background_color_title"
+						android:persistent="true" />
+				
+				<Preference
+						android:key="@string/preference_text_color"
+						android:title="@string/preference_text_color_title"
+						android:summary="@string/preference_text_color_summary"
+						android:persistent="true" />
+	
+				<Preference
+						android:key="@string/preference_location_background_color"
+						android:title="@string/preference_location_background_color_title"
+						android:persistent="true" />
+				
+				<Preference
+						android:key="@string/preference_location_text_color"
+						android:title="@string/preference_location_text_color_title"
+						android:persistent="true" />
+			
+			</PreferenceCategory>
+			
+			<PreferenceCategory
+					android:title="@string/color_settings_category_grid_title">
+			
+				<Preference
+						android:key="@string/preference_grid_color"
+						android:title="@string/preference_grid_color_title"
+						android:persistent="true" />
+				
+				<Preference
+						android:key="@string/preference_grid_outline_color"
+						android:title="@string/preference_grid_outline_color_title"
+						android:persistent="true" />
+			
+			</PreferenceCategory>
+			
+			<PreferenceCategory
+					android:title="@string/color_settings_category_indicator_title">
+			
+				<Preference
+						android:key="@string/preference_max_rain_color"
+						android:title="@string/preference_max_rain_color_title"
+						android:persistent="true" />
+				
+				<Preference
+						android:key="@string/preference_min_rain_color"
+						android:title="@string/preference_min_rain_color_title"
+						android:persistent="true" />
+				
+				<Preference
+						android:key="@string/preference_above_freezing_color"
+						android:title="@string/preference_above_freezing_color_title"
+						android:persistent="true" />
+				
+				<Preference
+						android:key="@string/preference_below_freezing_color"
+						android:title="@string/preference_below_freezing_color_title"
+						android:persistent="true" />
+			
+			</PreferenceCategory>
+			
+		</PreferenceScreen>		
+	
+	</PreferenceCategory>
+	
+	<PreferenceCategory
+			android:title="System Settings">
+
+		<PreferenceScreen
+				android:key="system_settings"
+				android:title="Update Settings"
+				android:summary="These settings are applied to all widgets">
+			
+			<PreferenceCategory
+					android:title="@string/system_settings_category">
+			
+				<CheckBoxPreference
+						android:key="@string/preference_awake_only"
+						android:title="@string/preference_awake_only_title"
+						android:persistent="true"
+						android:summaryOn="@string/preference_awake_only_summary_on"
+						android:summaryOff="@string/preference_awake_only_summary_off" />
+				
+				<CheckBoxPreference
+						android:key="@string/preference_wifi_only"
+						android:title="@string/preference_wifi_only_title"
+						android:persistent="true"
+						android:summaryOn="@string/preference_wifi_only_summary_on"
+						android:summaryOff="@string/preference_wifi_only_summary_off" />
+				
+				<ListPreference
+							android:key="@string/preference_update_rate"
+							android:title="@string/preference_update_rate_title"
+							android:summary="@string/preference_update_rate_summary"
+							android:persistent="true"
+							android:entries="@array/preference_update_rates_readable"
+							android:entryValues="@array/preference_update_rates_code"
+							android:defaultValue="0" />
+			
+			</PreferenceCategory>
+		
+		</PreferenceScreen>
 	
 	</PreferenceCategory>
 	
