--- a/Aix/res/xml/aix_widget_provider.xml
+++ b/Aix/res/xml/aix_widget_provider.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<appwidget-provider
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  	android:minWidth="294dip"
-  	android:minHeight="72dip"
-  	android:updatePeriodMillis="0"
-  	android:initialLayout="@layout/widget"
-  	android:configure="net.veierland.aix.AixConfigure" />
-  	
+<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
+		android:minWidth="294dp"
+		android:minHeight="72dp"
+		android:updatePeriodMillis="0"
+		android:initialLayout="@layout/widget"
+		android:configure="net.veierland.aix.AixConfigure" />
