--- a/Aix/res/layout-land/widget.xml
+++ b/Aix/res/layout-land/widget.xml
@@ -32,7 +32,14 @@
  			android:gravity="center_vertical|center_horizontal">
 
 		<ImageView
-				android:id="@+id/widgetImage"
+				android:id="@+id/widgetImagePortrait"
+				android:layout_width="318dp"
+				android:layout_height="98dp"
+				android:visibility="gone"
+				android:scaleType="fitXY" />
+
+		<ImageView
+				android:id="@+id/widgetImageLandscape"
 				android:layout_width="422dp"
 				android:layout_height="72dp"
 				android:visibility="visible"
