--- a/Aix/res/layout/aix_configure.xml
+++ b/Aix/res/layout/aix_configure.xml
@@ -12,6 +12,7 @@
 			android:scrollbarAlwaysDrawVerticalTrack="true" />
 
     <LinearLayout
+    	android:id="@+id/bottomBar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
