--- a/Aix/res/layout/aix_location_selection_row.xml
+++ b/Aix/res/layout/aix_location_selection_row.xml
@@ -22,6 +22,28 @@
 			android:layout_height="wrap_content">
 	
 		<TextView
+				android:text="Display title:"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:paddingLeft="6dip"
+				android:paddingRight="2dip"
+				android:textAppearance="?android:attr/textAppearanceSmall" />
+		
+		<TextView android:id="@+id/location_selection_row_display_title"
+				android:text="Ohaihai"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:paddingRight="6dip"
+				android:textAppearance="?android:attr/textAppearanceSmall" />
+	
+	</LinearLayout>
+	
+	<LinearLayout
+			android:orientation="horizontal"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content">
+	
+		<TextView
 				android:textAppearance="?android:attr/textAppearanceSmall"
 				android:text="@string/location_list_row_latitude"
 				android:layout_width="wrap_content"
