--- a/Aix/res/layout/dialog_color.xml
+++ b/Aix/res/layout/dialog_color.xml
@@ -18,9 +18,10 @@
 	    <net.veierland.aix.ColorView
 	    		android:id="@+id/alphaSlider"
 	    		style="@style/ColorView"
-	    		android:layout_width="27dip"
+	    		android:layout_width="30dip"
 	    		android:layout_height="wrap_content"
 	    		android:layout_marginRight="-3dip"
+	    		android:layerType="software"
 	    		android:maxHeight="300dip"
 	    		android:paddingTop="7dip"
 	    		android:paddingBottom="7dip"
@@ -32,6 +33,7 @@
 	    		android:layout_width="wrap_content"
 	    		android:layout_height="wrap_content"
 	    		android:layout_weight="1"
+	    		android:layerType="software"
 	    		android:maxWidth="300dip"
 	    		android:maxHeight="300dip"
 	    		android:paddingTop="7dip"
@@ -47,9 +49,10 @@
 	    <net.veierland.aix.ColorView
 	    		style="@style/ColorView"
 	    		android:id="@+id/hueSlider"
-	    		android:layout_width="27dip"
+	    		android:layout_width="30dip"
 	    		android:layout_height="wrap_content"
 	    		android:layout_marginLeft="-3dip"
+	    		android:layerType="software"
 	    		android:maxHeight="300dip"
 	    		android:paddingTop="7dip"
 	    		android:paddingBottom="7dip"
@@ -111,6 +114,7 @@
     			android:layout_height="wrap_content"
     			android:layout_weight="1"
     			android:layout_marginRight="5dip"
+    			android:layerType="software"
     			android:maxWidth="55dip"
     			android:maxHeight="27dip"
     			aix:borderWidth="1px"
@@ -122,6 +126,7 @@
     			android:layout_width="wrap_content"
     			android:layout_height="wrap_content"
     			android:layout_weight="1"
+    			android:layerType="software"
     			android:maxWidth="55dip"
     			android:maxHeight="27dip"
     			aix:borderWidth="1px"
