--- a/Aix/res/xml/aix_configuration.xml
+++ b/Aix/res/xml/aix_configuration.xml
@@ -3,13 +3,11 @@
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:aix="http://schemas.android.com/apk/res/net.veierland.aix">
 	
-	<PreferenceCategory
-			android:title="@string/header_widget_settings">
-		
+	<PreferenceCategory android:title="@string/header_widget_settings">
+	
 		<PreferenceScreen
-				android:key="unit_settings"
-				android:title="Measurement Units"
-				android:summary="Set measurement units and rain scaling">
+				android:title="@string/unit_settings_title"
+				android:summary="@string/unit_settings_summary">
 			
 			<PreferenceCategory
 					android:title="@string/unit_settings_category">
@@ -34,16 +32,17 @@
 						android:key="@string/precipitation_scaling_string"
 						android:title="@string/precipitation_scaling_title_mm"
 						android:persistent="true"
-						android:defaultValue="@string/precipitation_scaling_mm_default" />
+						android:defaultValue="@string/precipitation_scaling_mm_default"
+						android:inputType="numberDecimal"
+						android:selectAllOnFocus="true" />
 			
 			</PreferenceCategory>
 		
 		</PreferenceScreen>
 
 		<PreferenceScreen
-				android:key="color_settings"
-				android:title="UI settings"
-				android:summary="Modify widget appearance">
+				android:title="@string/ui_settings_title"
+				android:summary="@string/ui_settings_summary">
 		
 			<PreferenceCategory
 					android:title="@string/ui_settings_category_widget">
@@ -99,14 +98,18 @@
 						android:title="@string/border_thickness_title"
 						android:dependency="@string/border_enabled_bool"
 						android:persistent="true"
-						android:defaultValue="@string/border_thickness_default" />
+						android:defaultValue="@string/border_thickness_default"
+						android:inputType="numberDecimal"
+						android:selectAllOnFocus="true" />
 				
 				<EditTextPreference
 						android:key="@string/border_rounding_string"
 						android:title="@string/border_rounding_title"
 						android:summary="@string/border_rounding_summary"
 						android:persistent="true"
-						android:defaultValue="@string/border_rounding_default" />
+						android:defaultValue="@string/border_rounding_default"
+						android:inputType="numberDecimal"
+						android:selectAllOnFocus="true" />
 				
 			</PreferenceCategory>
 
@@ -188,18 +191,17 @@
 	</PreferenceCategory>
 	
 	<PreferenceCategory
-			android:title="System Settings">
+			android:title="@string/header_system_settings">
 
 		<PreferenceScreen
-				android:key="system_settings"
-				android:title="Update Settings"
-				android:summary="These settings are applied to all widgets">
+				android:title="@string/system_settings_title"
+				android:summary="@string/system_settings_summary">
 			
 			<PreferenceCategory
 					android:title="@string/system_settings_category">
 			
 				<ListPreference
-						android:key="@string/provider_string"
+						android:key="@string/preference_provider_string"
 						android:title="@string/provider_title"
 						android:persistent="true"
 						android:entries="@array/provider_readable"
@@ -207,21 +209,21 @@
 						android:defaultValue="1" />
 			
 				<CheckBoxPreference
-						android:key="@string/awake_only_bool"
+						android:key="@string/preference_awake_only_bool"
 						android:title="@string/awake_only_title"
 						android:persistent="true"
 						android:summaryOn="@string/awake_only_summary_on"
 						android:summaryOff="@string/awake_only_summary_off" />
 				
 				<CheckBoxPreference
-						android:key="@string/wifi_only_bool"
+						android:key="@string/preference_wifi_only_bool"
 						android:title="@string/wifi_only_title"
 						android:persistent="true"
 						android:summaryOn="@string/wifi_only_summary_on"
 						android:summaryOff="@string/wifi_only_summary_off" />
 				
 				<ListPreference
-							android:key="@string/update_rate_string"
+							android:key="@string/preference_update_rate_string"
 							android:title="@string/update_rate_title"
 							android:summary="@string/update_rate_summary"
 							android:persistent="true"
@@ -232,15 +234,17 @@
 			</PreferenceCategory>
 		
 		</PreferenceScreen>
+		
+		<Preference android:key="@string/device_profiles_key"
+					android:title="@string/device_profiles_title"
+					android:summary="@string/device_profiles_summary" />
 	
 	</PreferenceCategory>
 	
-	<PreferenceCategory
-			android:title="@string/header_location_settings">
+	<PreferenceCategory android:title="@string/header_location_settings">
 		
-		<Preference
-				android:key="select_location"
-				android:title="@string/select_location" />
+		<Preference android:title="@string/location_settings_title"
+					android:key="@string/location_settings_key" />
 
 	</PreferenceCategory>
 
