--- a/Aix/res/xml/aix_widget_provider.xml
+++ b/Aix/res/xml/aix_widget_provider.xml
@@ -3,5 +3,6 @@
 		android:minWidth="294dp"
 		android:minHeight="72dp"
 		android:updatePeriodMillis="0"
-		android:initialLayout="@layout/widget"
-		android:configure="net.veierland.aix.AixConfigure" />
+		android:initialLayout="@layout/widget_text"
+		android:configure="net.veierland.aix.AixConfigure"
+		android:previewImage="@drawable/aix_widget_preview" />
