--- a/Aix/res/layout/activity_device_profiles.xml
+++ b/Aix/res/layout/activity_device_profiles.xml
@@ -13,6 +13,7 @@
     
     <LinearLayout
 		    android:id="@+id/focusLayout"
+		    android:orientation="vertical"
 		    android:focusable="true"
 		    android:focusableInTouchMode="true"
 		    android:layout_width="0px"
@@ -169,8 +170,7 @@
 					android:text="150"
 					android:inputType="number" />
 			
-			<View android:id="@+id/divider"
-					android:background="#ff313431"
+			<View   android:background="#ff313431"
 					android:layout_width="1dip"
 					android:layout_height="fill_parent"
 					android:layout_marginLeft="10dip"
@@ -277,8 +277,7 @@
 					android:text="150"
 					android:inputType="number" />
 					
-			<View android:id="@+id/divider"
-					android:background="#ff313431"
+			<View   android:background="#ff313431"
 					android:layout_width="1dip"
 					android:layout_height="fill_parent"
 					android:layout_marginLeft="10dip"
