--- a/Aix/res/xml/aix_configuration.xml
+++ b/Aix/res/xml/aix_configuration.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
 		xmlns:android="http://schemas.android.com/apk/res/android"
-		xmlns:aix="http://schemas.android.com/apk/res/net.veierland.aix">
+		xmlns:aix="http://schemas.android.com/apk/res-auto">
 	
 	<PreferenceCategory android:title="@string/header_widget_settings">
 	
