--- a/Aix/app/src/main/res/layout/location_selection_list.xml
+++ b/Aix/app/src/main/res/layout/location_selection_list.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
 		android:orientation="vertical">
 	
 	<ListView android:id="@+id/android:list"
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="0dip"
 			android:layout_weight="1"
 			android:drawSelectorOnTop="false"
@@ -14,32 +14,32 @@
 	
 	<LinearLayout android:id="@+id/android:empty"
 			android:orientation="vertical"
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="0dip"
 			android:layout_weight="1">
 	
 		<TextView android:id="@+id/ListItemTitle"
 				android:text="@string/location_selector_no_items_title"
-				android:layout_width="fill_parent"
+				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:textAppearance="?android:attr/textAppearanceLarge" />
 		
 		<TextView android:id="@+id/ListItemText"
 				android:text="@string/location_selector_no_items_text"
-				android:layout_width="fill_parent"
+				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:textAppearance="?android:attr/textAppearanceSmall" />
 	
 	</LinearLayout>
 	
 	<LinearLayout
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:orientation="horizontal"
 			android:background="@android:drawable/bottom_bar">
 
         <View	android:layout_width="0dip"
-        		android:layout_height="fill_parent"
+        		android:layout_height="match_parent"
         		android:layout_weight="1" />
 
         <Button android:id="@+id/add_location_button"
@@ -50,7 +50,7 @@
         		android:text="@string/button_add_location" />
 
         <View	android:layout_width="0dip"
-        		android:layout_height="fill_parent"
+        		android:layout_height="match_parent"
         		android:layout_weight="1" />
 	
 	</LinearLayout>
