--- a/Aix/app/src/main/res/layout/dialog_color.xml
+++ b/Aix/app/src/main/res/layout/dialog_color.xml
@@ -3,13 +3,13 @@
 <LinearLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:aix="http://schemas.android.com/apk/res-auto"
-    	android:layout_width="fill_parent"
+    	android:layout_width="match_parent"
     	android:layout_height="wrap_content"
     	android:orientation="vertical"
     	android:padding="2dip">
     
     <LinearLayout
-    		android:layout_width="fill_parent"
+    		android:layout_width="match_parent"
     		android:layout_height="wrap_content"
     		android:layout_weight="1"
     		android:layout_marginBottom="-6dip"
@@ -62,7 +62,7 @@
     </LinearLayout>
 
     <LinearLayout
-    		android:layout_width="fill_parent"
+    		android:layout_width="match_parent"
     		android:layout_height="wrap_content"
     		android:layout_marginLeft="5dip"
     		android:layout_marginRight="5dip"
@@ -72,28 +72,28 @@
 
 		<TextView android:id="@+id/alphaText"
 				android:textAppearance="?android:attr/textAppearanceSmall"
-				android:layout_width="fill_parent"
+				android:layout_width="match_parent"
 				android:layout_weight="1"
 				android:layout_height="wrap_content"
 				android:gravity="center_horizontal" />
 		
 		<TextView android:id="@+id/hueText"
 				android:textAppearance="?android:attr/textAppearanceSmall"
-				android:layout_width="fill_parent"
+				android:layout_width="match_parent"
 				android:layout_weight="1"
 				android:layout_height="wrap_content"
 				android:gravity="center_horizontal" />
 		
 		<TextView android:id="@+id/saturationText"
 				android:textAppearance="?android:attr/textAppearanceSmall"
-				android:layout_width="fill_parent"
+				android:layout_width="match_parent"
 				android:layout_weight="1"
 				android:layout_height="wrap_content"
 				android:gravity="center_horizontal" />
 
 		<TextView android:id="@+id/valueText"
 				android:textAppearance="?android:attr/textAppearanceSmall"
-				android:layout_width="fill_parent"
+				android:layout_width="match_parent"
 				android:layout_weight="1"
 				android:layout_height="wrap_content"
 				android:gravity="center_horizontal" />
@@ -101,7 +101,7 @@
     </LinearLayout>
     
     <LinearLayout
-    		android:layout_width="fill_parent"
+    		android:layout_width="match_parent"
     		android:layout_height="wrap_content"
     		android:layout_marginLeft="5dip"
     		android:layout_marginRight="5dip"
