--- a/Aix/app/src/main/res/layout/location_selection_row.xml
+++ b/Aix/app/src/main/res/layout/location_selection_row.xml
@@ -4,12 +4,12 @@
 		android:orientation="vertical"
 		android:paddingTop="2dip"
 		android:paddingBottom="2dip"
-		android:layout_width="fill_parent"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:minHeight="?android:attr/listPreferredItemHeight">
 	
 	<TextView android:id="@+id/location_selection_row_title"
-				android:layout_width="fill_parent"
+				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:paddingLeft="6dip"
 				android:paddingTop="6dip"
@@ -18,7 +18,7 @@
 	
 	<LinearLayout
 			android:orientation="horizontal"
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content">
 	
 		<TextView
@@ -40,7 +40,7 @@
 	
 	<LinearLayout
 			android:orientation="horizontal"
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content">
 	
 		<TextView
