--- a/Aix/app/src/main/res/layout/preference_widget_color.xml
+++ b/Aix/app/src/main/res/layout/preference_widget_color.xml
@@ -2,8 +2,8 @@
 <LinearLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:aix="http://schemas.android.com/apk/res-auto"
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
 		android:orientation="horizontal"
 		android:gravity="center_vertical">
 	
@@ -28,7 +28,7 @@
 	<view	class="net.veierland.aix.ColorPreference$RevertHolder"
 			android:id="@+id/revert"
 			android:layout_width="wrap_content"
-        	android:layout_height="fill_parent"
+        	android:layout_height="match_parent"
         	android:paddingLeft="12dip"
         	android:paddingRight="12dip"
         	android:src="@drawable/undo"
