--- a/Aix/app/src/main/res/values/styles.xml
+++ b/Aix/app/src/main/res/values/styles.xml
@@ -20,8 +20,8 @@
 	    <item name="android:background">#0000</item>
 		<item name="android:gravity">center</item>
 		<item name="android:includeFontPadding">false</item>
-		<item name="android:layout_width">fill_parent</item>
-		<item name="android:layout_height">fill_parent</item>
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">match_parent</item>
 		<item name="android:layout_weight">1</item>
 		<item name="android:padding">0dip</item>
 		<item name="android:shadowColor">@color/black</item>
