--- a/Aixd/app/src/main/res/layout/activity_configure.xml
+++ b/Aixd/app/src/main/res/layout/activity_configure.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
 		android:orientation="vertical">
 	
 	<ListView xmlns:android="http://schemas.android.com/apk/res/android" android:id="@android:id/list"
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="0dip"
 			android:layout_weight="1"
 			android:drawSelectorOnTop="false"
@@ -13,14 +13,14 @@
 
     <LinearLayout
     	android:id="@+id/bottomBar"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@android:drawable/bottom_bar">
 
         <View
             android:layout_width="0dip"
-            android:layout_height="fill_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"/>
 
         <Button android:id="@+id/add_widget_button"
@@ -32,7 +32,7 @@
 
         <View
             android:layout_width="0dip"
-            android:layout_height="fill_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"/>
     </LinearLayout>
 
