--- a/Aixd/app/src/main/res/layout/activity_device_profiles.xml
+++ b/Aixd/app/src/main/res/layout/activity_device_profiles.xml
@@ -2,14 +2,14 @@
 <ScrollView
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		android:id="@+id/mainLayout"
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
 		android:fillViewport="true">
 
 <LinearLayout
 		android:orientation="vertical"
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent">
+		android:layout_width="match_parent"
+		android:layout_height="match_parent">
     
     <LinearLayout
 		    android:id="@+id/focusLayout"
@@ -21,7 +21,7 @@
     
 	<LinearLayout
 			android:orientation="horizontal"
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_margin="6dip">
 	
@@ -40,7 +40,7 @@
 	
 	<TextView
 	    	android:id="@+id/aix_device_profile_guide"
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginLeft="6dip"
 			android:layout_marginRight="6dip"
@@ -50,7 +50,7 @@
 	
 	<TextView
 			android:text="Orientation mode:"
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginLeft="6dip"
 			android:layout_marginRight="6dip"
@@ -77,7 +77,7 @@
 	
 	<LinearLayout
 			android:orientation="horizontal"
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginLeft="6dip"
 			android:layout_marginTop="3dip"
@@ -102,8 +102,8 @@
 		
 		<TextView android:id="@+id/aix_device_profile_last_update"
 				android:text="Last database sync:\n14-09-2011 12:12"
-				android:layout_width="fill_parent"
-				android:layout_height="fill_parent"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
 				android:layout_gravity="center_vertical"
 				android:paddingLeft="6dip"
 				android:paddingTop="2dip"
@@ -114,7 +114,7 @@
 	
 	<TextView
 			android:id="@+id/portrait_dimensions_label"
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:text="Portrait dimensions (pixels)"
 			style="?android:attr/listSeparatorTextViewStyle"/>
@@ -132,7 +132,7 @@
 	
 	<LinearLayout
 			android:orientation="horizontal"
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="6dip"
 			android:layout_marginLeft="6dip"
@@ -148,7 +148,7 @@
 					android:textAppearance="?android:attr/textAppearanceSmall" />
 		
 			<EditText android:id="@+id/aix_device_profile_portrait_width"
-					android:layout_width="fill_parent"
+					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:layout_weight="1"
 					android:text="480"
@@ -164,15 +164,15 @@
 					android:textAppearance="?android:attr/textAppearanceSmall" />
 		
 			<EditText android:id="@+id/aix_device_profile_portrait_height"
-					android:layout_width="fill_parent"
+					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:layout_weight="1"
 					android:text="150"
 					android:inputType="number" />
 			
-			<View  	android:background="#ff313431"
+			<View   android:background="#ff313431"
 					android:layout_width="1dip"
-					android:layout_height="fill_parent"
+					android:layout_height="match_parent"
 					android:layout_marginLeft="10dip"
 					android:layout_marginTop="5dip"
 					android:layout_marginBottom="5dip" />
@@ -189,7 +189,7 @@
 	
 	<LinearLayout
 			android:orientation="horizontal"
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginLeft="6dip"
 			android:layout_marginRight="6dip">
@@ -220,7 +220,7 @@
 	
 	<TextView
 			android:id="@+id/landscape_dimensions_label"
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="6dip"
 			android:text="Landscape dimensions (pixels)"
@@ -239,7 +239,7 @@
 	
 	<LinearLayout
 			android:orientation="horizontal"
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="6dip"
 			android:layout_marginLeft="6dip"
@@ -255,7 +255,7 @@
 					android:textAppearance="?android:attr/textAppearanceSmall" />
 		
 			<EditText android:id="@+id/aix_device_profile_landscape_width"
-					android:layout_width="fill_parent"
+					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:layout_weight="1"
 					android:text="480"
@@ -271,7 +271,7 @@
 					android:textAppearance="?android:attr/textAppearanceSmall" />
 		
 			<EditText android:id="@+id/aix_device_profile_landscape_height"
-					android:layout_width="fill_parent"
+					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:layout_weight="1"
 					android:text="150"
@@ -279,7 +279,7 @@
 					
 			<View   android:background="#ff313431"
 					android:layout_width="1dip"
-					android:layout_height="fill_parent"
+					android:layout_height="match_parent"
 					android:layout_marginLeft="10dip"
 					android:layout_marginTop="5dip"
 					android:layout_marginBottom="5dip" />
@@ -296,7 +296,7 @@
 	
 	<LinearLayout
 			android:orientation="horizontal"
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginLeft="6dip"
 			android:layout_marginRight="6dip">
