--- a/Aixd/app/src/main/res/layout/dialog_edittext.xml
+++ b/Aixd/app/src/main/res/layout/dialog_edittext.xml
@@ -8,7 +8,7 @@
 
     <EditText 
         android:id="@+id/edittext"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLength="50"
     />
