--- a/Aixd/app/src/main/res/layout/help.xml
+++ b/Aixd/app/src/main/res/layout/help.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
 		android:maxWidth="300dip">
 	
 	<LinearLayout
 			android:id="@+id/buttons"
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:orientation="horizontal"
 			android:layout_alignParentBottom="true"
 			android:background="@android:drawable/bottom_bar">
 
         <View	android:layout_width="0dip"
-        		android:layout_height="fill_parent"
+        		android:layout_height="match_parent"
         		android:layout_weight="1" />
 
         <Button android:id="@+id/ok"
@@ -25,15 +25,15 @@
         		android:text="Close" />
 
         <View	android:layout_width="0dip"
-        		android:layout_height="fill_parent"
+        		android:layout_height="match_parent"
         		android:layout_weight="1" />
 	
 	</LinearLayout>
 	
 	<WebView
 		    android:id="@+id/webview"
-		    android:layout_width="fill_parent"
-		    android:layout_height="fill_parent"
+		    android:layout_width="match_parent"
+		    android:layout_height="match_parent"
 		    android:layout_margin="0px"
 		    android:layout_above="@id/buttons"
 		    android:layout_alignParentTop="true"
