--- a/Aixd/app/src/main/res/layout/widget_large_tiny_portrait.xml
+++ b/Aixd/app/src/main/res/layout/widget_large_tiny_portrait.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     	android:id="@+id/widgetContainer"
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
 		android:gravity="center_vertical|center_horizontal">
 
 	<ImageView
 			android:id="@+id/widgetImage"
-			android:layout_width="@dimen/large_portrait_width"
-			android:layout_height="@dimen/tiny_portrait_height"
-			android:scaleType="fitXY"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:minWidth="@dimen/large_portrait_width_min"
+			android:minHeight="@dimen/tiny_portrait_height_min"
+			android:maxWidth="@dimen/large_portrait_width_max"
+			android:maxHeight="@dimen/tiny_portrait_height_max"
+			android:scaleType="fitCenter"
+			android:adjustViewBounds="true"
 			android:contentDescription="@string/contentDescriptionPortraitImage" />
 
 </LinearLayout>
